starting writewln2.cpp

--- a/CodeBase/Parser/CMakeLists.txt
+++ b/CodeBase/Parser/CMakeLists.txt
@@ -15,4 +15,7 @@ include_directories("${CMAKE_SOURCE_DIR}/../openbabel/include/")
 
 add_executable(wisswesser parser.cpp readwln.cpp writewln.cpp)
 
+add_executable(new-writer writewln2.cpp)
+
 target_link_libraries(wisswesser "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.0.0.dylib")
+target_link_libraries(new-writer "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.0.0.dylib")
