--- a/CodeBase/Parser/CMakeLists.txt
+++ b/CodeBase/Parser/CMakeLists.txt
@@ -3,6 +3,17 @@ project(wisswesser)
 
 set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -std=c++11")
 
+if (DEBUGWLN)
+  if(DEBUGWLN STREQUAL "on" OR DEBUGWLN STREQUAL "ON")
+    message(STATUS "WLN Debugging mode - enabled\n")
+  elseif(DEBUGWLN STREQUAL "off" OR DEBUGWLN STREQUAL "OFF")
+    message(STATUS "WLN Debugging mode - disabled\n")
+  else() 
+    message (WARNING "Invalid selection for DEBUGWLN, must be on|ON or off|OFF\n")
+  endif()
+else()
+  message(STATUS "WLN Debugging mode - disabled\n")
+endif()
 
 include_directories(
         ${PROJECT_SOURCE_DIR}/include
@@ -12,9 +23,7 @@ include_directories(
 include_directories("${CMAKE_SOURCE_DIR}/../openbabel/build/include/")
 include_directories("${CMAKE_SOURCE_DIR}/../openbabel/include/")
 
-
 add_executable(wisswesser parser.cpp readwln.cpp writewln.cpp)
-
 add_executable(wln-writer writewln2.cpp)
 
 target_link_libraries(wisswesser "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.0.0.dylib")
