--- a/CodeBase/Parser/CMakeLists.txt
+++ b/CodeBase/Parser/CMakeLists.txt
@@ -6,6 +6,7 @@ set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -O3 -std=c++11")
 if (DEBUGWLN)
   if(DEBUGWLN STREQUAL "on" OR DEBUGWLN STREQUAL "ON")
     message(STATUS "WLN Debugging mode - enabled\n")
+    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DDEBUGWLN=1")
   elseif(DEBUGWLN STREQUAL "off" OR DEBUGWLN STREQUAL "OFF")
     message(STATUS "WLN Debugging mode - disabled\n")
   else() 
