--- a/CodeBase/Parser/.vscode/settings.json
+++ b/CodeBase/Parser/.vscode/settings.json
@@ -3,6 +3,7 @@
         "new": "cpp",
         "deque": "cpp",
         "string": "cpp",
-        "vector": "cpp"
+        "vector": "cpp",
+        "iosfwd": "cpp"
     }
 }
