--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,9 @@
-Data/
-Papers/
-Figures/
-Deprecated/masters.tar
-Reports/presentations/
-CodeBase/.vscode/
-CodeBase/Parser/build/
-CodeBase/Parser/.vscode/
-CodeBase/openbabel/
+data/
+papers/
+figures/
+dep/masters.tar
+reports/presentations/
+src/.vscode/
+src/parser/build/
+src/parser/.vscode/
+src/openbabel/
