started the process of moving the wlnwriter code into my new api

--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -23,8 +23,7 @@ include_directories(
 )
 
 add_executable(readwln readwln2.cpp)
-#add_executable(writewln writewln.cpp)
-#add_executable(writewln2 writewln2.cpp)
+add_executable(writewln writewln2.cpp)
 
 include_directories("${CMAKE_SOURCE_DIR}/../openbabel/build/include/")
 include_directories("${CMAKE_SOURCE_DIR}/../openbabel/include/")
@@ -33,8 +32,8 @@ if(WIN32)
   message(ERROR "Unsupported operating system - windows")
 elseif(APPLE)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
-  #target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
-  #target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
 endif()
