--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -26,17 +26,17 @@ add_executable(readwln readwln2.cpp)
 add_executable(writewln writewln2.cpp)
 add_executable(obabel_strip obabel_strip.cpp)
 
-include_directories("${CMAKE_SOURCE_DIR}/../openbabel/build/include/")
-include_directories("${CMAKE_SOURCE_DIR}/../openbabel/include/")
+include_directories("${CMAKE_SOURCE_DIR}/../../external/openbabel/build/include/")
+include_directories("${CMAKE_SOURCE_DIR}/../../external/openbabel/include/")
 
 if(WIN32)
   message(ERROR "Unsupported operating system - windows")
 elseif(APPLE)
-  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
-  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
-  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
-  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
-  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
-  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
 endif()
