--- a/src/parser/CMakeLists.txt
+++ b/src/parser/CMakeLists.txt
@@ -23,6 +23,7 @@ include_directories(
 )
 
 add_executable(readwln readwln2.cpp)
+add_executable(OLD_readwln wln-nextmove.cpp)
 add_executable(writewln writewln2.cpp)
 add_executable(obabel_strip obabel_strip.cpp)
 
@@ -33,10 +34,12 @@ if(WIN32)
   message(ERROR "Unsupported operating system - windows")
 elseif(APPLE)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(OLD_readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(OLD_readwln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/../../external/openbabel/build/lib/libopenbabel.so.7")
 endif()
