non-counting g file, now to unwrap the recursive statements

--- a/src/grammars/.vscode/launch.json
+++ b/src/grammars/.vscode/launch.json
@@ -7,7 +7,7 @@
           "type": "antlr-debug",
           "request": "launch",
           "input": "grammar_debug.txt",
-          "grammar": "WLN.g4",
+          "grammar": "wln_fsm.g4",
           "startRule": "read",
           "printParseTree": true,
           "visualParseTree": true
