using tanimoto to compare mols, removes stereo in comp

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,7 +25,7 @@ include_directories(
 add_executable(readwln ${PROJECT_SOURCE_DIR}/src/parser/readwln2.cpp)
 add_executable(OLD_readwln ${PROJECT_SOURCE_DIR}/src/parser/wln-nextmove.cpp)
 add_executable(writewln ${PROJECT_SOURCE_DIR}/src/parser/writewln2.cpp)
-add_executable(obabel_strip ${PROJECT_SOURCE_DIR}/src/parser/obabel_strip.cpp)
+add_executable(obcomp ${PROJECT_SOURCE_DIR}/src/parser/obcomp.cpp)
 
 add_executable(wlngrep ${PROJECT_SOURCE_DIR}/src/wlngrep/wlngrep.cpp)
 
@@ -38,10 +38,10 @@ elseif(APPLE)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(OLD_readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
-  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
   target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(OLD_readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
-  target_link_libraries(obabel_strip "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
 endif()
