wlngen project structure

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -8,6 +8,7 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/src/wlngrep
         ${PROJECT_SOURCE_DIR}/src/mwln
         ${PROJECT_SOURCE_DIR}/src/wlncompress
+        ${PROJECT_SOURCE_DIR}/src/wlngen
 )
 
 add_executable(readwln ${PROJECT_SOURCE_DIR}/src/parser/readwln2.cpp)
@@ -19,10 +20,9 @@ add_executable(wlngrep ${PROJECT_SOURCE_DIR}/src/wlngrep/wlngrep.cpp)
 
 add_executable(writemwln ${PROJECT_SOURCE_DIR}/src/mwln/writemwln.cpp)
 
-add_executable(wlntrain ${PROJECT_SOURCE_DIR}/src/wlncompress/wlntrain.cpp)
 add_executable(wlncompress ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnarithmetic.cpp)
-add_executable(wlncompress2 ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnhuffman.cpp)
 
+add_executable(wlntrain ${PROJECT_SOURCE_DIR}/src/wlngen/wlntrain.cpp)
 
 include_directories("${CMAKE_SOURCE_DIR}/external/openbabel/build/include/")
 include_directories("${CMAKE_SOURCE_DIR}/external/openbabel/include/")
