--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -39,3 +39,7 @@ elseif(UNIX)
   target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(wlngen "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
 endif()
+
+
+target_compile_definitions(readwln PRIVATE ERRORS=1)
+target_compile_definitions(wlngen PRIVATE ERRORS=0)
