write WLN short into reader for my version of a canonical form

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,12 +17,14 @@ add_executable(readwln
   ${PROJECT_SOURCE_DIR}/src/wlnparser/reader.cpp 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/readwln2.cpp 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/wln-nextmove.cpp
+  ${PROJECT_SOURCE_DIR}/src/wlnparser/wlnshort.cpp
 )
 
 add_executable(writewln 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/writer.cpp 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/writewln2.cpp 
 )
+
 
 add_executable(obcomp ${PROJECT_SOURCE_DIR}/src/wlnparser/obcomp.cpp)
 add_executable(wlngrep ${PROJECT_SOURCE_DIR}/src/wlngrep/wlngrep.cpp)
@@ -58,13 +60,13 @@ include_directories("${CMAKE_SOURCE_DIR}/external/openbabel/include/")
 if(WIN32)
   message(ERROR "Unsupported operating system - Windows")
 elseif(APPLE)
-  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
+  target_link_libraries(readwln  "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(compareFP "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   #  target_link_libraries(wlngen "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
-  target_link_libraries(readwln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
+  target_link_libraries(readwln  "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(compareFP "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
