--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -25,9 +25,9 @@ add_executable(writewln
 )
 
 
-# add_executable(wlntree 
-#   ${PROJECT_SOURCE_DIR}/src/wlnparser/wlnFT.cpp 
-# )
+add_executable(modernwln
+  ${PROJECT_SOURCE_DIR}/src/wlnparser/modernwln.cpp
+)
 
 
 add_executable(obcomp ${PROJECT_SOURCE_DIR}/src/wlnparser/obcomp.cpp)
@@ -50,14 +50,14 @@ add_executable(wlnpaq6
 set_target_properties(wlnpaq6 PROPERTIES COMPILE_FLAGS "-m32" LINK_FLAGS "-m32") 
 
 
-add_executable(dotzip 
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/dotzip.cpp
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/lempelz.cpp
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/huffman.cpp
-  ${PROJECT_SOURCE_DIR}/src/wlncompress/context_trie.cpp
-)
+# add_executable(dotzip 
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/dotzip.cpp
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/lempelz.cpp
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/huffman.cpp
+#   ${PROJECT_SOURCE_DIR}/src/wlncompress/context_trie.cpp
+# )
 
 #add_executable(compareFP
 #  ${PROJECT_SOURCE_DIR}/src/wlnFP/compareFP.cpp
