bug fix in string decode

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -52,14 +52,14 @@ if(!MACOS)
 endif() 
 
 
-# add_executable(dotzip 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/dotzip.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/lempelz.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/huffman.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/context_trie.cpp
-# )
+add_executable(dotzip 
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/dotzip.cpp
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/lempelz.cpp
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/huffman.cpp
+  ${PROJECT_SOURCE_DIR}/src/wlncompress/context_trie.cpp
+)
 
 #add_executable(compareFP
 #  ${PROJECT_SOURCE_DIR}/src/wlnFP/compareFP.cpp
