--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,12 +9,11 @@ include_directories(
         ${PROJECT_SOURCE_DIR}/src/wlnparser
         ${PROJECT_SOURCE_DIR}/src/wlngrep
         ${PROJECT_SOURCE_DIR}/src/wlncompress
-        ${PROJECT_SOURCE_DIR}/src/wlnFP
-        #   ${PROJECT_SOURCE_DIR}/src/wlngen
 )
 
 add_executable(readwln 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/reader.cpp 
+  ${PROJECT_SOURCE_DIR}/src/wlnparser/readwln.cpp
   ${PROJECT_SOURCE_DIR}/src/wlnparser/readwln2.cpp 
   ${PROJECT_SOURCE_DIR}/src/wlnparser/wln-nextmove.cpp
 )
@@ -25,7 +24,6 @@ add_executable(writewln
 )
 
 
-add_executable(obcomp ${PROJECT_SOURCE_DIR}/src/wlnparser/obcomp.cpp)
 add_executable(wlngrep ${PROJECT_SOURCE_DIR}/src/wlngrep/wlngrep.cpp)
 
 add_executable(wlnzip 
@@ -46,31 +44,6 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   set_target_properties(wlnpaq6 PROPERTIES COMPILE_OPTIONS "-m32" LINK_FLAGS "-m32") 
 endif() 
 
-#
-# add_executable(dotzip 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/dotzip.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/lempelz.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/huffman.cpp
-#   ${PROJECT_SOURCE_DIR}/src/wlncompress/context_trie.cpp
-# )
-
-#add_executable(compareFP
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/compareFP.cpp
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/wlnFP.cpp
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/FPMetric.cpp
-#  ${PROJECT_SOURCE_DIR}/src/wlnparser/readwln2.cpp
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/wlnlingo.cpp 
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/alignment.cpp 
-#)
-
-#add_executable(wlndesc  
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/wlndesc.cpp
-#  ${PROJECT_SOURCE_DIR}/src/wlnFP/wlnFP.cpp
-#)
-
-
 include_directories("${CMAKE_SOURCE_DIR}/external/openbabel/build/include/")
 include_directories("${CMAKE_SOURCE_DIR}/external/openbabel/include/")
 
@@ -79,18 +52,8 @@ if(WIN32)
 elseif(MACOSX)
   target_link_libraries(readwln  "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
-  target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
-  #target_link_libraries(compareFP "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
-  #  target_link_libraries(wlngen "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.7.dylib")
 elseif(UNIX)
   target_link_libraries(readwln  "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
   target_link_libraries(writewln "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
-  target_link_libraries(obcomp "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
-  #target_link_libraries(compareFP "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
-  #  target_link_libraries(wlngen "${CMAKE_SOURCE_DIR}/external/openbabel/build/lib/libopenbabel.so.7")
 endif()
-
-
-target_compile_definitions(readwln PRIVATE ERRORS=1)
-# target_compile_definitions(wlntree PRIVATE ERRORS=1)
 
