split out bench, simplify and clean

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -9,19 +9,6 @@ if(CMAKE_BUILD_TYPE STREQUAL "DEBUG")
   set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -g -fsanitize=address -Wall -Wpedantic -Wextra")
 endif()
 
-option(UNIT_TESTS "Enable/disable unit testing" TRUE)
-
-if(UNIT_TESTS)
-  find_package(Catch2 3)
-  if(Catch2_FOUND)
-    include(CTest)
-    include(Catch)
-    message(STATUS "Catch2 found")
-  else()
-    message(STATUS "Catch2 not found! Testing is disabled")
-  endif()
-endif()
-
 list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 
 find_package(OpenBabel3 REQUIRED)
@@ -34,7 +21,6 @@ else()
   message(FATAL_ERROR "OpenBabel library not found")
 endif(OPENBABEL3_FOUND)
 
-
 include_directories(
   ${CMAKE_SOURCE_DIR}/src/wlnparser
   ${CMAKE_SOURCE_DIR}/src/wlngrep
@@ -45,25 +31,16 @@ add_executable(readwln
   ${CMAKE_SOURCE_DIR}/src/wlnparser/readwln.cpp 
   ${CMAKE_SOURCE_DIR}/src/wlnparser/wlnreader.cpp
 )
-target_link_libraries(readwln  ${OPENBABEL3_LIBRARIES})
 
-# add_executable(writewln 
-#   ${CMAKE_SOURCE_DIR}/src/wlnparser/writer.cpp 
-#   ${CMAKE_SOURCE_DIR}/src/wlnparser/writewln2.cpp 
-# )
-# target_link_libraries(writewln ${OPENBABEL3_LIBRARIES})
+add_executable(benchwln 
+  ${CMAKE_SOURCE_DIR}/src/wlnparser/benchwln.cpp 
+  ${CMAKE_SOURCE_DIR}/src/wlnparser/wlnreader.cpp
+)
+
+target_link_libraries(readwln   ${OPENBABEL3_LIBRARIES})
+target_link_libraries(benchwln  ${OPENBABEL3_LIBRARIES})
 
 add_executable(wlngrep ${CMAKE_SOURCE_DIR}/src/wlngrep/wlngrep.cpp)
-
-# add_executable(wlnzip 
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/wlnzip.cpp
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/wlnppm.cpp 
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/wlndeflate.cpp 
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/lempelz.cpp
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/huffman.cpp
-#   ${CMAKE_SOURCE_DIR}/src/wlncompress/context_trie.cpp
-# )
-#
 
 # this will not compile on Arm64 // fix at later date
 if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
@@ -72,17 +49,3 @@ if(${CMAKE_SYSTEM_NAME} MATCHES "Linux")
   )
   set_target_properties(wlnpaq6 PROPERTIES COMPILE_OPTIONS "-m32" LINK_FLAGS "-m32") 
 endif() 
-
-
-if (Catch2_FOUND)
-add_executable(test_wlnread ${CMAKE_SOURCE_DIR}/test/readwln_catch2.cpp
-                            ${CMAKE_SOURCE_DIR}/src/wlnparser/wlnreader.cpp)
-                          target_link_libraries(test_wlnread PRIVATE Catch2::Catch2WithMain ${OPENBABEL3_LIBRARIES})
-target_compile_options(test_wlnread PUBLIC "-std=gnu++17") 
-catch_discover_tests(test_wlnread)
-target_compile_definitions(test_wlnread PUBLIC TEST_DIR="${CMAKE_SOURCE_DIR}/tests" BIN_DIR="${CMAKE_CURRENT_BINARY_DIR}")
-add_custom_target(check COMMAND ${CMAKE_CTEST_COMMAND}
-                  DEPENDS test_wlnread)
-endif()
-
-
