openbabel direct plugin, code broken but very flexible and clean now

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -13,10 +13,10 @@ list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake/modules")
 
 find_package(OpenBabel3 REQUIRED)
 if(OPENBABEL3_FOUND)
-  set(USE_OPENBABEL true)
   set(OPENBABEL_INCLUDE_DIR ${OPENBABEL3_INCLUDE_DIR})
   set(OPENBABEL_LIBRARIES ${OPENBABEL3_LIBRARIES})
   include_directories(${OPENBABEL_INCLUDE_DIR})
+  set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DUSING_OPENBABEL")
 else()
   message(FATAL_ERROR "OpenBabel library not found")
 endif(OPENBABEL3_FOUND)
